--- a/setup_info.ini
+++ b/setup_info.ini
@@ -1,23 +1,28 @@
 apt update && apt upgrade -y
+apt install -y ca-certificates curl gnupg lsb-release ufw
+
+ufw allow OpenSSH
+ufw allow 80,443/tcp
+ufw --force enable
+
 apt install -y docker.io docker-compose
 systemctl enable docker
+
+mkdir -p /etc/apt/keyrings
+curl -fsSL https://download.docker.com/linux/ubuntu/gpg | tee /etc/apt/keyrings/docker.asc > /dev/null
+echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | tee /etc/apt/sources.list.d/docker.list > /dev/null
+
+apt install -y docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
+systemctl enable docker.socket
+systemctl start docker.socket
+systemctl restart docker
+docker login --username wilex A114umdlilusm.
 
 mkdir -p ~/app && cd ~/app
 rm -rf yanda_shop
 git clone https://TOKEN@github.com/wi1ex/yanda_shop.git
 cd yanda_shop
 
-apt update
-apt install -y ca-certificates curl gnupg
-mkdir -p /etc/apt/keyrings
-curl -fsSL https://download.docker.com/linux/ubuntu/gpg | tee /etc/apt/keyrings/docker.asc > /dev/null
-echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | tee /etc/apt/sources.list.d/docker.list > /dev/null
-apt update
-apt install -y docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
-systemctl enable docker.socket
-systemctl start docker.socket
-systemctl restart docker
-docker login --username wilex A114umdlilusm.
 export DOCKER_BUILDKIT=1
 export COMPOSE_DOCKER_CLI_BUILD=1
 
@@ -25,27 +30,13 @@ sudo apt install certbot -y
 sudo certbot certonly --standalone -d yanda.twc1.net
 sudo certbot renew --force-renewal
 
-ufw allow 22/tcp
-ufw allow 80/tcp
-ufw allow 443/tcp
-ufw allow 5432/tcp
-ufw allow 6379/tcp
-ufw allow 8000/tcp
-ufw allow 8080/tcp
-ufw enable
-
-docker-compose build --no-cache
-docker-compose up -d
-docker-compose logs -f
-
 chmod +x deploy.sh
 ./deploy.sh
 
-# npm install локально для обновления package-lock.json
-# запись домена в .env, store.js, nginx.conf и BotFather
-# git clone https://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@github.com/wi1ex/yanda_shop.git
-# telegram bot token=7207149343:AAFdbkzwWDY8z_n8-a0rtYr9R2bQqt3-y8U
-
+npm install локально для обновления package-lock.json
+запись домена в .env, store.js, nginx.conf и BotFather
+git clone https://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@github.com/wi1ex/yanda_shop.git
+telegram bot token=7207149343:AAFdbkzwWDY8z_n8-a0rtYr9R2bQqt3-y8U
 
 # первичная настройка миграции
 docker-compose up -d db backend
