--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,7 +40,7 @@ services:
       start_period: 30s
 
   minio:
-    image: minio/minio:RELEASE.2025-05-01T00-00-00Z
+    image: minio/minio:latest
     command: server /data
     env_file: .env
     environment:
