--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -90,7 +90,7 @@ services:
         condition: service_healthy
     restart: always
     healthcheck:
-      test: ["CMD", "pgrep", "-f", "bot.py"]
+      test: ["CMD-SHELL", "pgrep -f bot.py >/dev/null"]
       interval: 30s
       timeout: 5s
       retries: 3
